CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(fsm
    VERSION     1.0.0
    LANGUAGES   C
    DESCRIPTION "C library for finite state machines."
)

ADD_LIBRARY(${PROJECT_NAME} STATIC)
TARGET_SOURCES(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT}src/fsm.c)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
